<resources>
    <string name="app_name">Recipe Master</string>
    <string name="app_title">What\'s in your kitchen ?</string>
    <string name="app_toolbar_desc">Cook with what you have.</string>
    <string name="recipe_input_hint">Ingredients</string>
    <string name="yt_link">Watch in Youtube</string>
    <string name="get_recipe">Get Recipe</string>
    <string name="recipe_add_text">Add</string>
</resources>